--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<div id="app"></div>
-	<script type="module" src="src/main.ts"></script>
+	<script type="module" src="src/scripts/game.ts"></script>
 </body>
 
 </html>
