--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" type="text/css" href="./styles.css" />
 	<title>Ghost Shed</title>
 </head>
 
 <body>
-	<div id="app"></div>
+	<div class="container">
+		<div id="app"></div>
+	</div>
 	<script type="module" src="src/scripts/game.ts"></script>
 </body>
 
