--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" type="text/css" href="./styles.css" />
+	
 	<title>Ghost Shed</title>
+  <script type="module" crossorigin src="/group-project-ghostshed/assets/index.a464444b.js"></script>
+  <link rel="stylesheet" href="/group-project-ghostshed/assets/index.3c221f4f.css">
 </head>
 
 <body style="padding: 0px; margin: 0px; overflow-y: hidden;">
 	<div class="container">
 		<div id="app"></div>
 	</div>
-	<script type="module" src="src/scripts/game.ts"></script>
+	
 </body>
 
 </html>
