--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Ghost Shed</title>
 </head>
 
-<body style="padding: 0px; margin: 0px; overflow-y: hidden;">
+<body style="padding: 0px; margin: 0px; overflow-y: hidden;font-family:  CustomFont;">
 	<div class="container">
 		<div id="app"></div>
 	</div>
