--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	
 	<title>Ghost Shed</title>
-  <script type="module" crossorigin src="/group-project-ghostshed/assets/index.3915011f.js"></script>
-  <link rel="stylesheet" href="/group-project-ghostshed/assets/index.3c221f4f.css">
+  <script type="module" crossorigin src="/group-project-ghostshed/assets/index.58953186.js"></script>
+  <link rel="stylesheet" href="/group-project-ghostshed/assets/index.16bd1a08.css">
 </head>
 
-<body style="padding: 0px; margin: 0px; overflow-y: hidden;">
+<body style="padding: 0px; margin: 0px; overflow-y: hidden;font-family:  CustomFont;">
 	<div class="container">
 		<div id="app"></div>
 	</div>
